# teck

./: .clang-format  .gitignore  2  CMakeLists.txt  CMakeSettings.json  README.md  build-shaders.bat  imgui.ini  run.bat  run.sh
ext/: CMakeLists.txt  CMakeLists.txtimgui
lib/: CMakeLists.txt
rec/shaders/: base.vert
src/: main.cpp
src/core/: CMakeLists.txt  def.h  dynamic-array.h  dynamic_array.h  engine.cpp  engine.h  logger.cpp  logger.h  reader.cpp  reader.h  render-util.cpp  render-util.h  renderer.cpp  renderer.h  types.h  window.cpp  window.h
src/core/components/: c_shape.h  c_transform2d.h
src/core/ecs/: registry.h  view.h
src/core/enums/: e_shape.h
src/core/networking/: nettest.cpp  nettest.h
src/core/primitives/: vertex.h
src/core/systems/: system.cpp  system.h
src/core/systems/update/: SPlayer.h  s_shape.cpp  s_shape.h  update_system.h
src/core/threads/: thread_pool.cpp  thread_pool.h  worker_thread.cpp  worker_thread.h
src/modules/client/engine/: client_engine.cpp  client_engine.h
src/modules/client/networking/: client_connection.cpp  client_connection.h
src/modules/common/networking/: connection.h
src/modules/networking/: CMakeLists.txt  client-connection.cpp  client-connection.h  connection.h  server-connection.cpp  server-connection.h
src/modules/server/engine/: server_engine.h
src/modules/server/networking/: server_connection.cpp  server_connection.h
src/targets/client/: CMakeLists.txt  imgui.ini  main.cpp
src/targets/editor/: CMakeLists.txt
src/targets/server/: CMakeLists.txt  main.cpp
src/util/: terminal-color-mod.h
targets/client/: CMakeLists.txt  imgui.ini  main.cpp
